--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -30,6 +30,8 @@
     <color name="alipay">#1677FF</color>
     <color name="vipps">#FF5B24</color>
     <color name="mobilepay">#5A78FF</color>
+    <color name="bancontact">#000268</color>
+    <color name="payconiq">#FF4785</color>
 
     <!--  PRIMER THEME  -->
     <!--  override these values for custom theming  -->
