--- a/primer-sdk-android/src/main/res/layout/fragment_dotpay_bank_selection.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_dotpay_bank_selection.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:minHeight="@dimen/loading_height">
 
     <RelativeLayout
         android:id="@+id/choose_bank_parent"
@@ -89,7 +90,7 @@
     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/loading_height"
+        android:layout_height="match_parent"
         android:layout_centerInParent="true" />
 </RelativeLayout>
 
