--- a/example/src/main/res/layout/fragment_first.xml
+++ b/example/src/main/res/layout/fragment_first.xml
@@ -12,21 +12,17 @@
         android:layout_marginBottom="72dp"
         android:fillViewport="true">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/customerIdTextFieldLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="32dp"
-                android:hint="@string/customer_id"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_margin="10dp"
+                android:hint="@string/customer_id">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/customerIdTextField"
@@ -37,76 +33,22 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/environmentMenu"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                android:layout_width="0dp"
+            <com.example.myapplication.ui.SettingsItem
+                android:id="@+id/countryItem"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/environment"
-                app:layout_constraintEnd_toEndOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintStart_toStartOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintTop_toBottomOf="@+id/customerIdTextFieldLayout">
-
-                <AutoCompleteTextView
-                    android:id="@+id/environmentTextField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
-                    android:inputType="none"
-                    android:singleLine="true" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/countryMenu"
-                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:hint="@string/country"
-                app:layout_constraintEnd_toEndOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintStart_toStartOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintTop_toBottomOf="@+id/environmentMenu">
-
-                <AutoCompleteTextView
-                    android:id="@+id/countryTextField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:editable="false"
-                    android:imeOptions="actionDone"
-                    android:inputType="none" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/currencyTextFieldLayout"
-                android:layout_width="100dp"
-                android:layout_height="0dp"
-                android:hint="@string/currency"
-                app:layout_constraintStart_toStartOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintTop_toTopOf="@+id/amountTextFieldLayout">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/currencyTextField"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:imeOptions="actionDone"
-                    android:singleLine="true" />
-
-            </com.google.android.material.textfield.TextInputLayout>
+                android:layout_width="match_parent"
+                android:padding="12dp"
+                android:layout_margin="10dp"
+                android:gravity="center"
+                android:orientation="horizontal"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/amountTextFieldLayout"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
+                android:layout_margin="10dp"
                 android:hint="@string/amount"
-                app:layout_constraintEnd_toEndOf="@+id/customerIdTextFieldLayout"
-                app:layout_constraintStart_toEndOf="@+id/currencyTextFieldLayout"
-                app:layout_constraintTop_toBottomOf="@+id/countryMenu">
+                >
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/amountTextField"
@@ -117,59 +59,13 @@
                     android:singleLine="true" />
 
             </com.google.android.material.textfield.TextInputLayout>
-
-
-            <CheckBox
-                android:id="@+id/klarnaCheckBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/klarna"
-                app:layout_constraintEnd_toEndOf="@+id/amountTextFieldLayout"
-                app:layout_constraintStart_toStartOf="@+id/currencyTextFieldLayout"
-                app:layout_constraintTop_toBottomOf="@+id/currencyTextFieldLayout" />
-
-            <CheckBox
-                android:id="@+id/paypalCheckBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/paypal"
-                app:layout_constraintEnd_toEndOf="@+id/klarnaCheckBox"
-                app:layout_constraintStart_toStartOf="@+id/klarnaCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/klarnaCheckBox" />
-
-            <CheckBox
-                android:id="@+id/cardCheckBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/cards"
-                app:layout_constraintEnd_toEndOf="@+id/paypalCheckBox"
-                app:layout_constraintStart_toStartOf="@+id/paypalCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/paypalCheckBox" />
-
-            <CheckBox
-                android:id="@+id/googlePayCheckBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/google_pay"
-                app:layout_constraintEnd_toEndOf="@+id/paypalCheckBox"
-                app:layout_constraintStart_toStartOf="@+id/paypalCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/cardCheckBox" />
-
-            <CheckBox
-                android:id="@+id/payByMobileCheckBox"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:text="@string/pay_by_mobile"
-                app:layout_constraintEnd_toEndOf="@+id/paypalCheckBox"
-                app:layout_constraintStart_toStartOf="@+id/googlePayCheckBox"
-                app:layout_constraintTop_toBottomOf="@+id/googlePayCheckBox" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </ScrollView>
 
     <Button
         android:id="@+id/nextButton"
-        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
@@ -180,18 +76,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/button_second"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="@string/test_deprecated_checkout"
-        app:backgroundTint="@color/primer"
-        app:cornerRadius="8sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nextButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
