--- a/primer-sdk-android/src/main/res/drawable/ic_generic_card.xml
+++ b/primer-sdk-android/src/main/res/drawable/ic_generic_card.xml
@@ -1,20 +1,7 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="90dp"
-    android:height="60dp"
-    android:viewportWidth="90"
-    android:viewportHeight="60">
-  <path
-      android:pathData="M6,0L84,0A6,6 0,0 1,90 6L90,54A6,6 0,0 1,84 60L6,60A6,6 0,0 1,0 54L0,6A6,6 0,0 1,6 0z"
-      android:fillColor="#FF8C78"/>
-  <path
-      android:pathData="M0,9h90v13h-90z"
-      android:fillColor="#000000"/>
-  <path
-      android:pathData="M9.1591,29L80.8409,29A2,2 0,0 1,82.8409 31L82.8409,35A2,2 0,0 1,80.8409 37L9.1591,37A2,2 0,0 1,7.1591 35L7.1591,31A2,2 0,0 1,9.1591 29z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.65"/>
-  <path
-      android:pathData="M63.3636,45L80.8409,45A2,2 0,0 1,82.8409 47L82.8409,51A2,2 0,0 1,80.8409 53L63.3636,53A2,2 0,0 1,61.3636 51L61.3636,47A2,2 0,0 1,63.3636 45z"
-      android:fillColor="#ffffff"
-      android:fillAlpha="0.65"/>
+<vector android:height="20dp" android:viewportHeight="60"
+    android:viewportWidth="90" android:width="30dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#DBDBDB" android:pathData="M6,0L84,0A6,6 0,0 1,90 6L90,54A6,6 0,0 1,84 60L6,60A6,6 0,0 1,0 54L0,6A6,6 0,0 1,6 0z"/>
+    <path android:fillColor="#000000" android:pathData="M0,9h90v13h-90z"/>
+    <path android:fillAlpha="0.65" android:fillColor="#ffffff" android:pathData="M9.1592,29L80.841,29A2,2 0,0 1,82.841 31L82.841,35A2,2 0,0 1,80.841 37L9.1592,37A2,2 0,0 1,7.1592 35L7.1592,31A2,2 0,0 1,9.1592 29z"/>
+    <path android:fillAlpha="0.65" android:fillColor="#ffffff" android:pathData="M63.3638,45L80.8411,45A2,2 0,0 1,82.8411 47L82.8411,51A2,2 0,0 1,80.8411 53L63.3638,53A2,2 0,0 1,61.3638 51L61.3638,47A2,2 0,0 1,63.3638 45z"/>
 </vector>
