--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -39,6 +40,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:suffixTextColor="@android:color/black"
             android:hint="@string/card_number">
 
             <com.google.android.material.textfield.TextInputEditText
@@ -47,6 +49,7 @@
                 android:layout_height="wrap_content"
                 android:digits="0123456789 "
                 android:imeOptions="actionNext"
+                android:drawablePadding="10dp"
                 android:inputType="number" />
         </io.primer.android.ui.components.TextInputWidget>
 
