--- a/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/primer_select_payment_method_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -37,93 +40,97 @@
                 android:textIsSelectable="true" />
         </io.primer.android.ui.SelectPaymentMethodTitle>
 
-        <TextView
-            android:id="@+id/saved_payment_method_label"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:id="@+id/primer_saved_payment_section"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_list_margin"
-            android:layout_marginEnd="@dimen/small_padding"
-            android:text="@string/saved_payment_methods"
-            android:textColor="@color/primer_text_color_muted"
-            app:layout_constraintEnd_toStartOf="@id/see_all_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout" />
+            android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout"
+            app:layout_constraintEnd_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="parent" >
 
-        <TextView
-            android:id="@+id/see_all_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/manage"
-            android:textAllCaps="true"
-            app:layout_constraintBaseline_toBaselineOf="@id/saved_payment_method_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/saved_payment_method_label" />
+            <LinearLayout
+                android:id="@+id/primer_saved_payment_section_header"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/primer_list_margin"
+                android:orientation="horizontal" >
 
-        <include
-            android:id="@+id/saved_payment_method"
-            layout="@layout/payment_method_item"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_list_margin"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/saved_payment_method_label" />
+                <TextView
+                    android:id="@+id/saved_payment_method_label"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
 
-        <io.primer.android.ui.components.PayButton
-            android:id="@+id/payAllButton"
-            android:layout_width="0dp"
-            android:layout_height="@dimen/pay_button_height"
-            android:layout_marginTop="@dimen/xl_vertical_margin"
-            android:elevation="0dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/saved_payment_method" />
+                    android:layout_marginEnd="@dimen/small_padding"
+                    android:text="@string/saved_payment_methods"
+                    android:textColor="@color/primer_text_color_muted" />
 
-        <View
-            android:id="@+id/otherWaysToPayStartDivider"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginEnd="10dp"
-            android:background="@color/primer_text_color_muted"
-            app:layout_constraintBottom_toBottomOf="@+id/other_ways_to_pay_label"
-            app:layout_constraintEnd_toStartOf="@+id/other_ways_to_pay_label"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/other_ways_to_pay_label" />
+                <TextView
+                    android:id="@+id/see_all_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@string/manage"
+                    android:textAllCaps="true" />
 
-        <View
-            android:id="@+id/otherWaysToPayEndDivider"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginStart="10dp"
-            android:background="@color/primer_text_color_muted"
-            app:layout_constraintBottom_toBottomOf="@+id/other_ways_to_pay_label"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/other_ways_to_pay_label"
-            app:layout_constraintTop_toTopOf="@+id/other_ways_to_pay_label" />
+            </LinearLayout>
+
+            <io.primer.android.ui.components.PaymentMethodButtonGroupBox
+                android:id="@+id/saved_payment_method_box"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="10dp" >
+
+                <include
+                    android:id="@+id/saved_payment_method"
+                    layout="@layout/payment_method_item"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"/>
+
+                <io.primer.android.ui.components.PayButton
+                    android:id="@+id/payAllButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:elevation="0dp" />
+
+            </io.primer.android.ui.components.PaymentMethodButtonGroupBox>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/other_ways_to_pay_label"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/xxl_vertical_margin"
-            android:text="@string/available_payment_methods"
+            android:layout_marginTop="@dimen/large_vertical_margin"
             android:textAllCaps="true"
+            android:text="@string/available_payment_methods"
             android:textColor="@color/primer_text_color_muted"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/primer_saved_payment_section"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/payAllButton" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
-        <!-- TODO consider recyclerview here -->
         <LinearLayout
             android:id="@+id/primer_sheet_payment_methods_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
+            app:layout_constraintTop_toBottomOf="@id/other_ways_to_pay_label"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
+        <ProgressBar
+            android:id="@+id/primer_select_payment_method_spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/loading_height"
+            android:visibility="invisible"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/other_ways_to_pay_label" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.core.widget.NestedScrollView>
