--- a/example/src/main/res/layout/fragment_country_picker.xml
+++ b/example/src/main/res/layout/fragment_country_picker.xml
@@ -14,6 +14,24 @@
         android:orientation="horizontal"/>
 
     <com.example.myapplication.ui.SettingsItem
+        android:id="@+id/ukItem"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="12dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"/>
+
+    <com.example.myapplication.ui.SettingsItem
+        android:id="@+id/usItem"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="12dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"/>
+
+    <com.example.myapplication.ui.SettingsItem
         android:id="@+id/swedenItem"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
