--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -94,7 +94,8 @@
     <color name="primer_input_cursor">@color/primer_primary</color>
 
     <!--  custom colors for search text inputs in universal checkout -->
-    <color name="primer_search_input_background">@color/primer_bank_selection_search_background</color>
+    <color name="primer_search_input_background">@color/primer_bank_selection_search_background
+    </color>
     <color name="primer_search_input_text">@color/primer_secondary</color>
     <color name="primer_search_input_cursor">@color/primer_primary</color>
 
