--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -40,16 +40,18 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:suffixTextColor="@android:color/black"
-            android:hint="@string/card_number">
+            android:hint="@string/card_number"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@null"
+            app:suffixTextColor="@android:color/black">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_card_number_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:digits="0123456789 "
-                android:imeOptions="actionNext"
                 android:drawablePadding="10dp"
+                android:imeOptions="actionNext"
                 android:inputType="number" />
         </io.primer.android.ui.components.TextInputWidget>
 
@@ -65,12 +67,15 @@
             android:orientation="horizontal">
 
             <io.primer.android.ui.components.TextInputWidget
+                android:id="@+id/card_form_card_expiry"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="4dp"
                 android:layout_weight="1"
-                android:hint="@string/card_expiry">
+                android:hint="@string/card_expiry"
+                app:errorEnabled="true"
+                app:errorIconDrawable="@null">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/card_form_card_expiry_input"
@@ -82,12 +87,15 @@
             </io.primer.android.ui.components.TextInputWidget>
 
             <io.primer.android.ui.components.TextInputWidget
+                android:id="@+id/card_form_card_cvv"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="4dp"
                 android:layout_weight="1"
-                android:hint="@string/card_cvv">
+                android:hint="@string/card_cvv"
+                app:errorEnabled="true"
+                app:errorIconDrawable="@null">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/card_form_card_cvv_input"
@@ -100,30 +108,57 @@
 
         </LinearLayout>
 
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/primer_input_spacing_vert" />
-
         <io.primer.android.ui.components.TextInputWidget
+            android:id="@+id/card_form_cardholder_name"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/card_holder_name">
+            android:layout_marginTop="@dimen/primer_input_spacing_vert"
+            android:hint="@string/card_holder_name"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@null">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/card_form_cardholder_name_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:imeOptions="actionDone"
                 android:inputType="textPersonName"
                 android:maxLines="1" />
         </io.primer.android.ui.components.TextInputWidget>
 
-        <Space
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="@dimen/primer_input_spacing_vert" />
+            android:orientation="horizontal">
+
+            <io.primer.android.ui.components.TextInputWidget
+                android:id="@+id/card_form_postal_code"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/primer_input_spacing_vert"
+                android:layout_weight="1"
+                android:hint="@string/card_zip"
+                android:visibility="gone"
+                app:errorEnabled="true"
+                app:errorIconDrawable="@null">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/card_form_postal_code_input"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:inputType="textPostalAddress"
+                    android:maxLines="1" />
+
+            </io.primer.android.ui.components.TextInputWidget>
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:minHeight="@dimen/primer_input_spacing_vert" />
+
+        </LinearLayout>
 
         <io.primer.android.ui.components.TextViewDanger
             android:id="@+id/card_form_error_message"
