--- a/primer-sdk-android/src/main/res/layout/payment_method_button_pay_mobile.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_button_pay_mobile.xml
@@ -17,5 +17,5 @@
         android:drawablePadding="10dp"
         android:gravity="center"
         android:text="@string/pay_by_mobile"
-        app:drawableStartCompat="@drawable/ic_mobile" />
+        app:drawableStartCompat="@drawable/ic_logo_apaya" />
 </io.primer.android.ui.components.ButtonDefaultLayout>
