--- a/example/src/main/res/layout/fragment_country_picker.xml
+++ b/example/src/main/res/layout/fragment_country_picker.xml
@@ -67,4 +67,14 @@
         android:gravity="center"
         android:orientation="horizontal"/>
 
+
+    <com.example.myapplication.ui.SettingsItem
+        android:id="@+id/franceItem"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:padding="12dp"
+        android:layout_margin="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"/>
+
 </LinearLayout>
