--- a/example/src/main/res/layout/fragment_first.xml
+++ b/example/src/main/res/layout/fragment_first.xml
@@ -63,6 +63,21 @@
     </ScrollView>
 
     <Button
+        android:id="@+id/componentsButton"
+        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="12dp"
+        android:text="@string/components"
+        app:backgroundTint="@color/primer"
+        app:cornerRadius="8sp"
+        app:layout_constraintBottom_toTopOf="@id/nextButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
         android:id="@+id/nextButton"
         android:layout_weight="1"
         android:layout_width="match_parent"
