--- a/example/src/main/res/navigation/nav_graph.xml
+++ b/example/src/main/res/navigation/nav_graph.xml
@@ -20,6 +20,14 @@
             app:popExitAnim="@anim/nav_default_pop_exit_anim" />
 
         <action
+            android:id="@+id/action_FirstFragment_to_ThirdFragment"
+            app:destination="@id/ThirdFragment"
+            app:enterAnim="@anim/nav_default_enter_anim"
+            app:exitAnim="@anim/nav_default_exit_anim"
+            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
+
+        <action
             android:id="@+id/action_FirstFragment_to_DeprecatedFeatureFragment"
             app:destination="@id/DeprecatedFeatureFragment"
             app:enterAnim="@anim/nav_default_enter_anim"
@@ -35,15 +43,20 @@
         android:id="@+id/SecondFragment"
         android:name="com.example.myapplication.SecondFragment"
         android:label="Wallet"
-        tools:layout="@layout/fragment_second">
-    </fragment>
+        tools:layout="@layout/fragment_second"></fragment>
+
+    <fragment
+        android:id="@+id/ThirdFragment"
+        android:name="com.example.myapplication.HeadlessComponentsFragment"
+        android:label="HUC"
+        tools:layout="@layout/fragment_third"/>
+
 
     <fragment
         android:id="@+id/DeprecatedFeatureFragment"
         android:name="com.example.myapplication.DeprecatedFeatureFragment"
         android:label="Deprecated Checkout"
-        tools:layout="@layout/fragment_deprecated_feature">
-    </fragment>
+        tools:layout="@layout/fragment_deprecated_feature"/>
 
     <fragment
         android:id="@+id/CountryPickerFragment"
