[DEX-1207] Implement of additional fields for billing address - https://primerapi.atlassian.net/browse/DEX-1207

--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -117,4 +117,7 @@
     <color name="primer_dummy_apm_checked_border">#007AFF</color>
     <color name="primer_dummy_apm_light_unchecked_border">#E5E5EA</color>
 
+    <!-- curom folors for search text inputs in country selection screen -->
+    <color name="primer_country_selection_divider">#DBDBDB</color>
+
 </resources>
