--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -37,8 +37,9 @@
     <color name="atome">#F0FF5F</color>
     <color name="xfers">#941F7F</color>
     <color name="p24">#C51B2A</color>
-    <color name="paytrail">#E50C96</color>
     <color name="iterac">#FEB92B</color>
+    <color name="paytrail">#E50C96</color>
+    <color name="payshop">#EE3424</color>
 
     <!--  PRIMER THEME  -->
     <!--  override these values for custom theming  -->
