--- a/example/src/main/res/layout/fragment_country_picker.xml
+++ b/example/src/main/res/layout/fragment_country_picker.xml
@@ -1,88 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/germanyItem"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvCountries"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/ukItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/usItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/swedenItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/singaporeItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/norwayItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/netherlandsItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/polandItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
-
-    <com.example.myapplication.ui.SettingsItem
-        android:id="@+id/franceItem"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:padding="12dp" />
+        android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="5"
+        tools:listitem="@layout/cell_country_item" />
 
 </LinearLayout>
