--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -38,6 +38,7 @@
     <color name="xfers">#941F7F</color>
     <color name="p24">#C51B2A</color>
     <color name="paytrail">#E50C96</color>
+    <color name="iterac">#FEB92B</color>
 
     <!--  PRIMER THEME  -->
     <!--  override these values for custom theming  -->
