--- a/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
+++ b/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
-        android:hint="@string/select_country"
+        android:hint="@string/address_country_code"
         app:errorEnabled="true"
         app:errorIconDrawable="@null">
 
@@ -43,7 +43,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
             android:hint="@string/first_name"
@@ -65,7 +64,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
             android:layout_weight="1"
             android:hint="@string/last_name"
             app:errorEnabled="true"
@@ -87,7 +85,6 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
         android:layout_weight="1"
         android:hint="@string/address_line_1"
@@ -108,7 +105,6 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
         android:layout_weight="1"
         android:hint="@string/address_line_2"
@@ -134,7 +130,6 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
             android:layout_marginEnd="4dp"
             android:layout_weight="1"
             android:hint="@string/card_zip"
@@ -148,6 +143,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textPostalAddress"
+                android:maxLength="11"
                 android:maxLines="1" />
 
         </io.primer.android.ui.components.TextInputWidget>
@@ -157,8 +153,7 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
-            android:layout_marginEnd="4dp"
+            android:layout_marginStart="4dp"
             android:layout_weight="1"
             android:hint="@string/address_city"
             app:errorEnabled="true"
@@ -180,7 +175,6 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
         android:layout_weight="1"
         android:hint="@string/address_state"
