--- a/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
+++ b/primer-sdk-android/src/main/res/layout/layout_billing_address_form.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:animateLayoutChanges="true"
     android:orientation="vertical">
 
     <TextView
@@ -20,6 +19,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/primer_input_spacing_vert"
+        android:layout_marginBottom="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
         android:hint="@string/address_country_code"
         app:errorEnabled="false"
@@ -44,8 +44,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
             android:layout_marginEnd="4dp"
+            android:layout_marginBottom="@dimen/primer_input_spacing_vert"
             android:layout_weight="1"
             android:hint="@string/first_name"
             app:errorEnabled="false"
@@ -66,7 +66,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
+            android:layout_marginBottom="@dimen/primer_input_spacing_vert"
             android:layout_weight="1"
             android:hint="@string/last_name"
             app:errorEnabled="false"
@@ -88,8 +88,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
         android:hint="@string/address_line_1"
         app:errorEnabled="false"
@@ -109,8 +109,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
         android:hint="@string/address_line_2"
         app:errorEnabled="false"
@@ -135,8 +135,8 @@
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
             android:layout_marginEnd="4dp"
+            android:layout_marginBottom="@dimen/primer_input_spacing_vert"
             android:layout_weight="1"
             android:hint="@string/card_zip"
             android:visibility="gone"
@@ -160,7 +160,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            android:layout_marginTop="@dimen/primer_input_spacing_vert"
+            android:layout_marginBottom="@dimen/primer_input_spacing_vert"
             android:layout_weight="1"
             android:hint="@string/address_city"
             app:errorEnabled="false"
@@ -182,8 +182,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/primer_input_spacing_vert"
         android:layout_marginEnd="4dp"
+        android:layout_marginBottom="@dimen/primer_input_spacing_vert"
         android:layout_weight="1"
         android:hint="@string/address_state"
         app:errorEnabled="false"
